<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.gsport24.ui.screens.main.fragments.profile.fragments.userInfo.UserInfoViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/PageContentStyle"
        android:layout_width="match_parent"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="outsideInset"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textColor="@color/white_80" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/surname"
                android:textColor="@color/white_80" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/second_name"
                android:textColor="@color/white_80" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSecondName"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/second_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/gender"
                android:textColor="@color/white_80" />

            <EditText
                android:id="@+id/etGender"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:drawableEnd="@drawable/ic_expand"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/gender"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:drawableTint="@color/edit_text_hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/white_80" />

            <EditText
                android:id="@+id/etDOB"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:drawableEnd="@drawable/ic_expand"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/date_of_birth"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:drawableTint="@color/edit_text_hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/white_80" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/white_80" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvPassportInfo"
                style="@style/AdapterItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/passport_info"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:drawableTint="@android:color/white" />

            <TextView
                android:id="@+id/tvChangePassword"
                style="@style/AdapterItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change_password"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:drawableTint="@android:color/white" />

            <com.example.gsport24.shared.LoadingButton
                android:id="@+id/tvSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bcg_ripple_green_rounded_10"
                android:transitionName="signInTransition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTermsAndPolicy"
                app:stateHandler='@{viewModel.uiState}'
                app:text="@string/save"
                app:textSize="@dimen/text_size_m" />

        </LinearLayout>

    </ScrollView>

</layout>
